# mylinalg

./: .gitignore  .pre-commit-config.yaml  README.md  mylinalg.ipynb  pyproject.toml
src/mylinalg/: __init__.py  decompositions.py  eigen.py  processing.py  solver.py  solvers.py  utils.py
