[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "mylinalg"
version = "0.0.0"

dependencies = ["numpy"]

requires-python = ">= 3.12"

authors = [
    {name = "@nelioasousa"}
]

readme = {file = "README.md", content-type = "text/markdown"}

[project.optional-dependencies]
dev = ["pre-commit", "ruff"]

[project.urls]
Source = "https://github.com/nelioasousa/mylinalg"


[tool]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.ruff]
line-length = 90

[tool.ruff.lint]
ignore = ["F401"]
